--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -375,7 +376,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -401,7 +403,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -456,7 +459,8 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -478,7 +482,8 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Справка о ранении": true
+      "Справка о ранении": true,
+      
     }
   },
   {
@@ -515,7 +520,8 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
 {
@@ -528,7 +534,8 @@ const services = [
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
-      "Размер дохода менее 1 МРОТ ?": true
+      "Размер дохода менее 1 МРОТ ?": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -579,7 +586,8 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -599,7 +607,8 @@ const services = [
     name: "Обеспечение бесплатного посещения культурно-массовых мероприятий, кружков и секций",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true
+      "Получена справка об участии в СВО": true,
+      "Наличие несовершеннолетних детей": true
       }
   },
   {
@@ -610,7 +619,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true
+      "ИПРА (индивидуальная программа реабилитации)": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -620,7 +630,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -630,7 +641,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -653,7 +665,8 @@ const services = [
       "Медицинское заключение для получения технических средств реабилитации": true,
       "Семья является многодетной": true,
       "Размер дохода менее 1 МРОТ ?": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -663,7 +676,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -673,7 +687,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -683,7 +698,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -748,7 +764,8 @@ const services = [
       "Получаю ежемесячную денежную выплату": true,
       "Семья является многодетной": true,
       "Размер дохода менее 1 МРОТ ?": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -762,7 +779,8 @@ const services = [
       "Медицинское заключение для получения технических средств реабилитации": true,
       "Получаю ежемесячную денежную выплату": true,
       "Семья является многодетной": true,
-      "Есть дети, обучающиеся в образовательных организациях": true
+      "Есть дети, обучающиеся в образовательных организациях": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
@@ -799,7 +817,8 @@ const services = [
     name: "Одновременное получение пенсии по случаю потери кормильца и социальной пенсии по инвалидности детьми-инвалидам и инвалидами с детства",
     params: {
       "Есть инвалидность": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Наличие несовершеннолетних детей": true
     }
   },
   {
