--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@ const services = [
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true
+      "ИПРА (индивидуальная программа реабилитации)": true,
+      "Получаю ежемесячную денежную выплату": true,
     }
   },
   {
@@ -535,7 +536,8 @@ const services = [
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
       "Размер дохода менее 1 МРОТ ?": true,
-      "Наличие несовершеннолетних детей": true
+      "Наличие несовершеннолетних детей": true,
+      "Получаю ежемесячную денежную выплату": true
     }
   },
   {
@@ -599,7 +601,8 @@ const services = [
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true
+      "ИПРА (индивидуальная программа реабилитации)": true,
+      "Получаю ежемесячную денежную выплату": true
     }
   },
   {
@@ -620,7 +623,8 @@ const services = [
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
-      "Наличие несовершеннолетних детей": true
+      "Наличие несовершеннолетних детей": true,
+      "Получаю ежемесячную денежную выплату": true
     }
   },
   {
@@ -666,7 +670,8 @@ const services = [
       "Семья является многодетной": true,
       "Размер дохода менее 1 МРОТ ?": true,
       "Есть дети, обучающиеся в образовательных организациях": true,
-      "Наличие несовершеннолетних детей": true
+      "Наличие несовершеннолетних детей": true,
+      "Получаю ежемесячную денежную выплату": true
     }
   },
   {
@@ -707,7 +712,8 @@ const services = [
     name: "Предоставление набора социальных услуг",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Есть инвалидность": true
+      "Есть инвалидность": true,
+      "Получаю ежемесячную денежную выплату": true
       }
   },
   {
@@ -780,7 +786,8 @@ const services = [
       "Получаю ежемесячную денежную выплату": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true,
-      "Наличие несовершеннолетних детей": true
+      "Наличие несовершеннолетних детей": true,
+      "Получаю ежемесячную денежную выплату": true
     }
   },
   {
