--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
+      "Семья является многодетной": true,
       "Наличие несовершеннолетних детей": true
     }
   },
@@ -347,7 +348,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Наличие несовершеннолетних детей": true
+      "Наличие несовершеннолетних детей": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -413,7 +415,8 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Наличие несовершеннолетних детей": true
+      "Наличие несовершеннолетних детей": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -537,7 +540,8 @@ const services = [
       "ИПРА (индивидуальная программа реабилитации)": true,
       "Размер дохода менее 1 МРОТ ?": true,
       "Наличие несовершеннолетних детей": true,
-      "Получаю ежемесячную денежную выплату": true
+      "Получаю ежемесячную денежную выплату": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -547,7 +551,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Наличие несовершеннолетних детей": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -624,7 +629,8 @@ const services = [
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
       "Наличие несовершеннолетних детей": true,
-      "Получаю ежемесячную денежную выплату": true
+      "Получаю ежемесячную денежную выплату": true,
+      "Семья является многодетной": true
     }
   },
   {
