--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Семья является многодетной": true,
+      "Справка МСЭ (медико-социальной экспертизы)": true,
       "Наличие несовершеннолетних детей": true
     }
   },
@@ -348,6 +349,7 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
+      "Справка МСЭ (медико-социальной экспертизы)": true,
       "Наличие несовершеннолетних детей": true,
       "Семья является многодетной": true
     }
@@ -564,6 +566,7 @@ const services = [
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
+      "Справка МСЭ (медико-социальной экспертизы)": true,
       "Медицинское заключение для получения технических средств реабилитации": true
     }
   },
@@ -715,6 +718,7 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Есть инвалидность": true,
+      "Справка МСЭ (медико-социальной экспертизы)": true,
       "Получаю ежемесячную денежную выплату": true
       }
   },
@@ -723,7 +727,8 @@ const services = [
     name: "Ежемесячная денежная выплата ветеранам боевых действий",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Есть инвалидность": true
+      "Есть инвалидность": true,
+      "Справка МСЭ (медико-социальной экспертизы)": true
     }
   },
   {
@@ -806,6 +811,7 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
+      "Справка МСЭ (медико-социальной экспертизы)": true,
       "Наличие имущества на правах аренды, собственности": true
     }
   },
@@ -822,6 +828,7 @@ const services = [
     name: "Одновременное получение пенсии по случаю потери кормильца и социальной пенсии по инвалидности детьми-инвалидам и инвалидами с детства",
     params: {
       "Есть инвалидность": true,
+      "Справка МСЭ (медико-социальной экспертизы)": true,
       "Являетесь родственником участника СВО": true,
       "Наличие несовершеннолетних детей": true
     }
