--- a/index.html
+++ b/index.html
@@ -478,7 +478,6 @@ const services = [
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
       "Получаю ежемесячную денежную выплату": true,
     }
   },
@@ -539,7 +538,6 @@ const services = [
       "Есть инвалидность": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
       "Размер дохода менее 1 МРОТ ?": true,
       "Наличие несовершеннолетних детей": true,
       "Получаю ежемесячную денежную выплату": true,
@@ -565,7 +563,6 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "Медицинское заключение для получения технических средств реабилитации": true
     }
@@ -609,7 +606,6 @@ const services = [
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
       "Получаю ежемесячную денежную выплату": true
     }
   },
@@ -630,7 +626,6 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
       "Наличие несовершеннолетних детей": true,
       "Получаю ежемесячную денежную выплату": true,
       "Семья является многодетной": true
@@ -673,7 +668,6 @@ const services = [
       "Есть инвалидность": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
       "Медицинское заключение для получения технических средств реабилитации": true,
       "Семья является многодетной": true,
       "Размер дохода менее 1 МРОТ ?": true,
@@ -786,7 +780,6 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
       "Медицинское заключение для получения технических средств реабилитации": true,
       "Получаю ежемесячную денежную выплату": true,
       "Есть дети, обучающиеся в образовательных организациях": true,
@@ -812,6 +805,7 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
+      "ИПРА (индивидуальная программа реабилитации)": true,
       "Наличие имущества на правах аренды, собственности": true
     }
   },
@@ -881,8 +875,8 @@ const services = [
       "Есть инвалидность": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-      "ИПРА (индивидуальная программа реабилитации)": true
+      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true
+      
     }
   },
   {
@@ -914,8 +908,8 @@ const services = [
     params: {
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true
+      "Справка МСЭ (медико-социальной экспертизы)": true
+      
     }
   },
   {
