--- a/index.html
+++ b/index.html
@@ -668,7 +668,6 @@ const services = [
       "Есть инвалидность": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "Медицинское заключение для получения технических средств реабилитации": true,
       "Семья является многодетной": true,
       "Размер дохода менее 1 МРОТ ?": true,
       "Есть дети, обучающиеся в образовательных организациях": true,
@@ -758,8 +757,8 @@ const services = [
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-      "Медицинское заключение для получения технических средств реабилитации": true
+      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true
+      
     }
   },
   {
@@ -780,7 +779,6 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "Медицинское заключение для получения технических средств реабилитации": true,
       "Получаю ежемесячную денежную выплату": true,
       "Есть дети, обучающиеся в образовательных организациях": true,
       "Наличие несовершеннолетних детей": true,
