--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@ const services = [
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "Получаю ежемесячную денежную выплату": true,
+      "Справка о ранении": true
     }
   },
   {
