--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@ const services = [
     name: "Предоставление отсрочки уплаты арендной платы по договорам аренды муниципального имущества в связи с частичной мобилизацией",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true
+      "Получена справка об участии в СВО": true,
+      "Наличие имущества на правах аренды, собственности": true
       }
   },
   {
@@ -397,7 +398,8 @@ const services = [
     name: "Освобождение от начисления пеней в случае несвоевременного и (или) неполного внесения гражданами Российской Федерации платы за жилое помещение и коммунальные услуги",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true
+      "Получена справка об участии в СВО": true,
+      "Наличие имущества на правах аренды, собственности": true
       }
   },
   {
@@ -426,7 +428,8 @@ const services = [
     name: "Первоочередное право на приобретение садовых земельных участков или огородных земельных участков",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true
+      "Получена справка об участии в СВО": true,
+      "Наличие имущества на правах аренды, собственности": true
       }
   },
 {
@@ -434,7 +437,8 @@ const services = [
     name: "Освобождение от уплаты услуг по водоснабжению и водоотведению",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true
+      "Получена справка об участии в СВО": true,
+      "Наличие имущества на правах аренды, собственности": true
       }
   },
   {
@@ -442,7 +446,8 @@ const services = [
     name: "Предоставление возможности расторжения договоров аренды без применения штрафных санкций",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true
+      "Получена справка об участии в СВО": true,
+      "Наличие имущества на правах аренды, собственности": true
      }
   },
   {
@@ -793,7 +798,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Являетесь родственником участника СВО": true,
-      "Размер дохода менее 1 МРОТ ?": true
+      "Размер дохода менее 1 МРОТ ?": true,
+      "Наличие имущества на правах аренды, собственности": true
     }
   },
   {
@@ -838,7 +844,8 @@ const services = [
     id: 50,
     name: "Предоставление отсрочки уплаты арендной платы либо возможности расторжения договоров аренды федерального имущества без применения штрафных санкций",
     params: {
-      "Получена справка об участии в СВО": true
+      "Получена справка об участии в СВО": true,
+      "Наличие имущества на правах аренды, собственности": true
       }
   },
   {
