--- a/index.html
+++ b/index.html
@@ -810,8 +810,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true,
-      "Наличие имущества на правах аренды, собственности": true
+      "ИПРА (индивидуальная программа реабилитации)": true
+      
     }
   },
   {
