--- a/регионы.html
+++ b/регионы.html
@@ -365,7 +365,7 @@ const services = [
   },
   {
     id: 4,
-    name: "Обеспечение бесплатным питанием обучающихся муниципальных казенных общеобразовательных учреждений муниципальных районов КБР",
+    name: "Обеспечение бесплатным питанием обучающихся муниципальных казенных общеобразовательных учреждений муниципальных районов",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
@@ -376,7 +376,7 @@ const services = [
   },
   {
     id: 5,
-    name: "Прием на обучение по образовательным программам начального общего основного общего и среднего общего образования в учреждения муниципальных районов КБР",
+    name: "Прием на обучение по образовательным программам начального общего основного общего и среднего общего образования в учреждения муниципальных районов",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
@@ -387,7 +387,7 @@ const services = [
   },
   {
     id: 6,
-    name: "О бесплатном предоставлении в собственность отдельным категориям граждан земельных участков для индивидуального жилищного строительства на территории Кабардино-Балкарской Республики",
+    name: "О бесплатном предоставлении в собственность отдельным категориям граждан земельных участков для индивидуального жилищного строительства на территории региона",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true
@@ -473,7 +473,7 @@ const services = [
   },
   {
     id: 15,
-    name: "Организация на территории Кабардино-Балкарской Республики санаторно-курортного лечения",
+    name: "Организация на территории региона санаторно-курортного лечения",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
@@ -525,7 +525,7 @@ const services = [
   },
   {
     id: 20,
-    name: "Обеспечение бесплатного посещения культурно-массовых мероприятий на территории Кабардино-Балкарской Республики для лиц участников СВО и членов их семей",
+    name: "Обеспечение бесплатного посещения культурно-массовых мероприятий на территории региона для лиц участников СВО и членов их семей",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
@@ -644,7 +644,7 @@ const services = [
   },
   {
     id: 31,
-    name: "Социальная поддержка детей-сирот и детей, оставшихся без попечения родителей, в КБР",
+    name: "Социальная поддержка детей-сирот и детей, оставшихся без попечения родителей",
     params: {
       "Получена справка об участии в СВО": true,
       "Есть дети, обучающиеся в образовательных организациях": true,
@@ -653,7 +653,7 @@ const services = [
   },
   {
     id: 32,
-    name: "Ежемесячная денежная выплата в размере 25 000 рублей военнослужащим призванным военным комиссариатом Кабардино-Балкарской Республики на военную службу",
+    name: "Ежемесячная денежная выплата в размере 25 000 рублей военнослужащим призванным военным комиссариатом региона на военную службу",
     params: {
       "Получена справка об участии в СВО": true
     }
@@ -999,7 +999,7 @@ document.addEventListener("click", function(e) {
     });
   // Сноска
 lines.push({
-  text: "\n*Информация предоставлена в ознакомительных целях. Для получения более подробной информации вы можете обратиться на горячую линию ГБУ «МФЦ КБР» по номеру 8 800 100 32-82.*",
+  text: "\n*Информация предоставлена в ознакомительных целях. Для получения более подробной информации вы можете обратиться на горячую линию МФЦ по номеру 8 800 100 32-82.*",
   italics: true,
   fontSize: 10,
   margin: [0, 15, 0, 0]
