--- a/регионы.html
+++ b/регионы.html
@@ -999,7 +999,7 @@ document.addEventListener("click", function(e) {
     });
   // Сноска
 lines.push({
-  text: "\n*Информация предоставлена в ознакомительных целях. Для получения более подробной информации вы можете обратиться на горячую линию МФЦ по номеру 8 800 100 32-82.*",
+  text: "\n*Информация предоставлена в ознакомительных целях. Для получения более подробной информации вы можете обратиться в ближайший МФЦ.*",
   italics: true,
   fontSize: 10,
   margin: [0, 15, 0, 0]
